--- a/src/main/resources/templates/register_failure.html
+++ b/src/main/resources/templates/register_failure.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="ISO-8859-1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Login or Registration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration Failure</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
-    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-
 </head>
 <body>
     <div class="container text-center">
-        <h1>Itunes search</h1>
+        <h3>User already exists</h3>
+        <h4><a th:href="@{/login}">Login</a></h4>
+        <h4><a th:href="@{/register}">Register</a></h4>
     </div>
-    
+     
 </body>
 </html>
