--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,8 @@
 <body>
     <div class="container text-center">
         <h1>Itunes search</h1>
+        <h3><a th:href="@{/register}">Register</a></h3>
+        <h3><a th:href="@{/login}">Login</a></h3>
     </div>
     
 </body>
