--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="ISO-8859-1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Login or Registration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registration Success</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
-    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-
 </head>
 <body>
-    <div class="container text-center">
-        <h1>Itunes search</h1>
+    <div th:each="music : ${list}">
+        <img th:src="${music.getArtwork()}"/>
     </div>
-    
+     
 </body>
 </html>
